@@ -6,7 +6,6 @@ import java.util.List;
 public class ServerContainer {
 
     public boolean ALL_PLAYERS_ARE_TEAMED_PVE_MODE = true;
-    public boolean ALLOW_OBSIDIAN_BREAKING_MEGA_EXPLOSIONS = true;
     public boolean LOG_REGISTRY_ENTRIES = false;
     public boolean GET_STARTER_ITEMS = false;
     public boolean ALWAYS_SCALE_MOB_LEVEL_TO_PLAYER = false;
@@ -19,10 +18,10 @@ public class ServerContainer {
     public double STAT_POINTS_PER_LVL = 1;
     public double TALENT_POINTS_PER_LVL = 1;
     public double VANILLA_MOB_DMG_AS_EXILE_DMG = 0.5F;
+    public double PVP_DMG_MULTI = 1F;
 
     public List<String> IGNORED_ENTITIES = Arrays.asList("minecraft:bat");
 
     public int MAX_LEVEL = 50;
-    public int LVL_WHEN_MOBS_START_SPAWNING_IN_DAYLIGHT = 10;
 
 }
