@@ -2,6 +2,7 @@ package com.robertx22.age_of_exile.database.data.spells.components.actions;
 
 import com.robertx22.age_of_exile.database.data.spells.components.MapHolder;
 import com.robertx22.age_of_exile.database.data.spells.components.tooltips.ICTextTooltip;
+import com.robertx22.age_of_exile.database.data.spells.modifiers.SpellModEnum;
 import com.robertx22.age_of_exile.database.data.spells.spell_classes.SpellCtx;
 import com.robertx22.age_of_exile.saveclasses.gearitem.gear_bases.TooltipInfo;
 import com.robertx22.age_of_exile.saveclasses.spells.calc.ValueCalculationData;
@@ -49,11 +50,13 @@ public class DamageAction extends SpellAction implements ICTextTooltip {
 
             int value = calc.getCalculatedValue(ctx.caster);
 
-            targets.forEach(t -> {
+            value *= ctx.calculatedSpellData.config.getMulti(SpellModEnum.DAMAGE);
+
+            for (LivingEntity t : targets) {
                 SpellDamageEffect dmg = new SpellDamageEffect(ctx.caster, t, value, ctx.calculatedSpellData.getSpell());
                 dmg.element = ele;
                 dmg.Activate();
-            });
+            }
         }
 
     }
