@@ -2,6 +2,7 @@ package com.robertx22.age_of_exile.database.data.spells.components.actions;
 
 import com.robertx22.age_of_exile.database.data.spells.components.MapHolder;
 import com.robertx22.age_of_exile.database.data.spells.components.tooltips.ICTextTooltip;
+import com.robertx22.age_of_exile.database.data.spells.modifiers.SpellModEnum;
 import com.robertx22.age_of_exile.database.data.spells.spell_classes.SpellCtx;
 import com.robertx22.age_of_exile.saveclasses.gearitem.gear_bases.TooltipInfo;
 import com.robertx22.age_of_exile.saveclasses.spells.calc.ValueCalculationData;
@@ -44,6 +45,8 @@ public class RestoreHealthAction extends SpellAction implements ICTextTooltip {
             ValueCalculationData calc = data.get(VALUE_CALCULATION);
 
             int value = calc.getCalculatedValue(ctx.caster);
+
+            value *= ctx.calculatedSpellData.config.getMulti(SpellModEnum.HEALING);
 
             ResourcesData.Context hctx = new ResourcesData.Context(Load.Unit(ctx.caster), ctx.caster, ResourcesData.Type.HEALTH,
                 value, ResourcesData.Use.RESTORE,
