@@ -4,6 +4,7 @@ import com.robertx22.age_of_exile.capability.player.PlayerSpellCap;
 import com.robertx22.age_of_exile.database.data.spells.components.Spell;
 import com.robertx22.age_of_exile.database.data.spells.spell_classes.bases.SpellCastContext;
 import com.robertx22.age_of_exile.database.registry.SlashRegistry;
+import com.robertx22.age_of_exile.uncommon.datasaving.Load;
 import info.loenwind.autosave.annotations.Storable;
 import info.loenwind.autosave.annotations.Store;
 import net.minecraft.entity.player.PlayerEntity;
@@ -43,6 +44,17 @@ public class SpellCastingData {
 
     @Store
     private HashMap<String, SpellData> spellDatas = new HashMap<>();
+
+    public void clearLockedSpells(PlayerEntity player) {
+        PlayerSpellCap.ISpellsCap spells = Load.spells(player);
+        new HashMap<>(bar).entrySet()
+            .forEach(x -> {
+                if (!spells.isSpellLearned(player, SlashRegistry.Spells()
+                    .get(x.getValue()))) {
+                    bar.put(x.getKey(), "");
+                }
+            });
+    }
 
     public void cancelCast(PlayerEntity player) {
         try {
